# large-scale-text-processing

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/embeddings/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py
examples/rag/: 01.py  02.py
examples/semantic/: 01.py
src/controllers/: __init__.py  chat.py
src/core/: __init__.py  ai.py  base.py  settings.py
src/db/: __init__.py  vector.py
src/schemas/: __init__.py  chat.py
src/services/: __init__.py  chat.py
src/utils/handlers/: __init__.py  pdf.py  vector.py
src/views/: __init__.py  home.py
